fix links and formatting https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -26,9 +26,9 @@ We look for:
 
 ## How to apply
 
-1. Read the [GSoC Student Guide](https://google.github.io/gsocguides/student/). It has a lot of useful information on how to write a good proposal.
+1. Read the [GSoC Contributor Guide](https://google.github.io/gsocguides/student/). It has a lot of useful information on how to write a good proposal.
 2. Participate in the [Discussions forum](https://github.com/orgs/scenerystack/discussions) for the project you are interested in or start your own for a new project and engage with the mentors and community in planning your project.
-3. Please e-mail a brief CV to scenerystackjs at gmail dot com along with answers to these questions:
+3. Please e-mail a brief CV to `scenerystackts at gmail dot com` along with answers to these questions:
       - What aspects of our project capture your interest the most?
       - Could you describe your background with the specific technologies we use?
       - Have you contributed to any other open-source initiatives, and if so, which ones?
@@ -42,7 +42,7 @@ We look for:
 
 ---
 
-## Project Ideas (updated January 2025)
+## Project Ideas (updated February 2025)
   
 ### Project 1: Develop a Simple Accessible Game using SceneryStack
 
@@ -54,7 +54,8 @@ We look for:
 - **TypeScript:** Basic knowledge of TypeScript to work with existing codebases and enhance type safety.  
 - **Git/GitHub:** Skills to contribute code and communicate effectively within the development team.
 - (helpful) **Accessibility (a11y) Concepts:** Familiarity with ARIA roles, keyboard navigation, and screen reader compatibility.
-[Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)  
+
+[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/123)  
 
 **Mentor:** Jonathan Olson
 
@@ -72,7 +73,7 @@ This project aims to develop a **fully accessible web-based game demo** using Sc
   - Use [**SceneryStack**](https://scenerystack.org/) to create a working prototype with full accessibility support.  
     - Implement **keyboard navigation**, including arrow-key and shortcut controls.  
     - Support **interactive screen reader descriptions [(Interactive Description)](https://phet.colorado.edu/en/inclusive-design/features?section=interactive-description)** via a Parallel DOM, ensuring proper navigation and feedback.
-    - Incorporate **Voicing features**, enabling auditory game feedback.  
+    - Incorporate **[Voicing](https://phet.colorado.edu/en/inclusive-design/features?section=voicing) features**, enabling auditory game feedback.  
     - Add **color customization options** to improve contrast for low-vision users.  
     - Implement **pan and zoom functionality** for adjustable views.  
   - **Collaborate with Designers:** Work with designers to create spoken descriptions that you will implement.
@@ -93,7 +94,7 @@ This project will serve as an **accessible alternative** and prove that web game
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project 1 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 1 Discussion Thread](https://github.com/orgs/scenerystack/discussions/123) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -107,7 +108,9 @@ Interested contributors should begin by participating in the [Project 1 Discussi
 - TypeScript: Basic knowledge of TypeScript to work with existing codebases and enhance type safety.
 - Git/GitHub: Skills to contribute code and communicate
 - (helpful) **Accessibility (a11y) Concepts:** Familiarity with ARIA roles, keyboard navigation, and screen reader compatibility.
-[Project Discussion Thread](<https://github.com/orgs/scenerystack/discussions> TODO: ADD SPECIFIC THREAD)
+
+[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/124)
+
 **Mentor:** Jesse Greenberg
 
 #### Description
@@ -134,7 +137,7 @@ Implementing an accessibility view for all SceneryStack projects is a crucial st
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project 2 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 2 Discussion Thread](https://github.com/orgs/scenerystack/discussions/124) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -151,7 +154,9 @@ Interested contributors should begin by participating in the [Project 2 Discussi
 - **Performance Profiling:** Experience with profiling tools to identify and resolve performance bottlenecks.
 - **Git/GitHub:** Familiarity with version control and collaborative development workflows.
 
-**Mentor:** Samuel Reid, Jonathan Olson
+[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/125)
+
+**Mentors:** Samuel Reid, Jonathan Olson
 
 #### Description
 
@@ -191,7 +196,7 @@ Optimizing the Kite library's shape operations is essential for delivering high-
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project 3 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 3 Discussion Thread](https://github.com/orgs/scenerystack/discussions/125) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
 
 ---
 
@@ -206,9 +211,9 @@ Interested contributors should begin by participating in the [Project 3 Discussi
 - **Git/GitHub:** Skills to contribute code, manage pull requests, and communicate effectively within the development team.
 - (helpful) **Accessibility (a11y) Concepts:** Familiarity with ARIA roles, keyboard navigation, and screen reader compatibility.  
 
-[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions) <!--TODO: ADD SPECIFIC THREAD-->  
+[Project Discussion Thread](https://github.com/orgs/scenerystack/discussions/126)
 
-**Mentor(s):** Sam Reid
+**Mentor:** Sam Reid
 
 #### Description
 
@@ -260,4 +265,4 @@ Despite the growing focus on **inclusive design**, many open-source libraries ei
 
 #### How to Apply
 
-Interested contributors should begin by participating in the [Project 4 Discussion Thread](https://github.com/orgs/scenerystack/discussions/categories/scenerystack) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
+Interested contributors should begin by participating in the [Project 4 Discussion Thread](https://github.com/orgs/scenerystack/discussions/126) to express their interest, ask questions, and engage with mentors and the SceneryStack/PhET community. Then proceed with the [instructions above for applying](#how-to-apply).
