further link and formatting fixes https://github.com/phetsims/special-ops/issues/275

--- a/docs/community/gsoc2025.md
+++ b/docs/community/gsoc2025.md
@@ -63,9 +63,9 @@ We look for:
 
 #### Description
 
-SceneryStack supports the creation of accessible, flexible web interactives by providing keyboard access, screen reader compatibility, and other accessibility features. While these features are well integrated into **PhET Interactive Simulations**, there is a lack of practical examples demonstrating their use in interactive games.  
+SceneryStack supports the creation of accessible, flexible web interactives by providing keyboard access, screen reader compatibility, and other accessibility features. While these features are well integrated into PhET Interactive Simulations, there is a lack of practical examples demonstrating their use in interactive games.  
 
-This project aims to develop a **fully accessible web-based game demo** using SceneryStack, showcasing **keyboard navigation, screen reader-compatible interactions, and customizable visual/audio features**. The game will serve as a **template and proof-of-concept** for making browser-based games more inclusive.  
+This project aims to develop a *fully accessible web-based game demo* using SceneryStack, showcasing keyboard navigation, screen reader-compatible interactions, and customizable visual/audio features. The game will serve as a template and proof-of-concept for making browser-based games more inclusive.  
 
 #### Key Tasks
 
@@ -82,17 +82,17 @@ This project aims to develop a **fully accessible web-based game demo** using Sc
 
 #### Expected Outcomes/Benefits/Deliverables
 
-**Fully Functional Accessible Game** – A playable, if simple, web-based game with **comprehensive a11y support**, serving as a model for future projects.  
+**Fully Functional Accessible Game** – A playable, if simple, web-based game with comprehensive a11y support, serving as a model for future projects.  
 
-**Showcase of SceneryStack's Accessibility Features** – Demonstrating how developers can **integrate a11y-first principles** into game development.  
+**Showcase of SceneryStack's Accessibility Features** – Demonstrating how developers can integrate a11y-first principles into game development.  
 
-**Improved Web Gaming Accessibility** – Addressing the current lack of **keyboard-accessible** and **screen reader-friendly** online games.
+**Improved Web Gaming Accessibility** – Addressing the current lack of keyboard-accessible and screen reader-friendly online games.
 
 #### Why This Project?
 
-Many popular online games are **not keyboard or screen reader accessible**, making them unusable for many people with disabilities. For example, the most popular online Chess platforms do not offer keyboard navigation or screen reader support, or only offer the most mimimal support - not enough for a rich interactive experience.  
+Many popular online games are not keyboard or screen reader accessible, making them unusable for many people with disabilities. For example, the most popular online Chess platforms do not offer keyboard navigation or screen reader support, or only offer the most mimimal support - not enough for a rich interactive experience.  
 
-This project will serve as an **accessible alternative** and prove that web games **can** be both **engaging and inclusive** from the start. Unlike most games that require users to **find and activate** accessibility settings, SceneryStack aims to provide **clear accessibility features from the moment the page loads**—removing barriers to entry for all players.  
+This project will serve as an accessible alternative and prove that web games can be both engaging and inclusive from the start. Unlike most games that require users to find and activate accessibility settings, SceneryStack aims to provide clear accessibility features from the moment the page loads—removing barriers to entry for all players.  
 
 #### How to Apply
 
@@ -125,9 +125,9 @@ Designing spoken descriptions for interactive web projects can be challenging, e
 
 - Get Familiar with PDOM and Scenery: Learn about the Parallel DOM (PDOM) and Scenery frameworks used in PhET simulations.
 - Understand the Current A11y View: Familiarize yourself with the existing a11y view in PhET simulations and how it interacts with the screen reader (e.g., [Greenhouse Effect A11y View](https://phet-dev.colorado.edu/html/greenhouse-effect/1.3.0-dev.6/phet/greenhouse-effect_a11y_view.html))
-- Understand basics of description design framework: Understand the basics of the [description design framework]().
+- Understand the basics of the description design framework: Understand the basics of the description design framework.
 - Implement [a new instantiation of the A11y View](https://github.com/phetsims/chipper/issues/1512) from scratch in the [Scenery](https://github.com/phetsims/scenery/) library.
-- Develop a very simple interactive example to highlight the a11y view in action.
+- Develop a very simple interactive example to highlight the A11y view in action.
 
 #### Expected Outcomes/Benefits/Deliverables
 
@@ -164,7 +164,7 @@ Interested contributors should begin by participating in the [Project 2 Discussi
 
 #### Description
 
-This project aims to enhance the performance and accuracy of SceneryStack's shape library, Kite, and its shape operations. Key areas of focus could include, depending on scope of the contributor's interests and expertise:
+This project aims to enhance the performance and accuracy of SceneryStack's shape library, Kite, and its shape operations. Key areas of focus could include, depending on the scope of the contributor's interests and expertise:
 
 1. **Optimizing Intersection Calculations:** Address inefficiencies in functions like `getLocalShape` to prevent excessive computations during shape intersections.
 2. **Refining Shape Union Operations:** Improve the `Shape.union` method to handle complex cases more efficiently and eliminate errors related to advanced disambiguation.
@@ -223,50 +223,49 @@ Interested contributors should begin by participating in the [Project 3 Discussi
 
 #### Description
 
-**SceneryStack** is an open-source web development framework designed for creating interactive, accessible web interfaces. We would like to improve the core functionality of SceneryStack by introducing a glass pane layer to help with interaction. The glass pane layer will be used to intercept mouse and touch events when a modal dialog, combo box, or menu popup is shown. The glass pane should be automatically used, for instance, so that a ComboBox can be created without knowledge of its container. Likewise, a non-modal dialog should remain in front while allowing interaction with the rest of the page.
+SceneryStack is an open-source web development framework designed for creating interactive, accessible web interfaces. We would like to improve the core functionality of SceneryStack by introducing a glass pane layer to help with interaction. The glass pane layer will be used to intercept mouse and touch events when a modal dialog, combo box, or menu popup is shown. The glass pane should be automatically used, for instance, so that a ComboBox can be created without knowledge of its container. Likewise, a non-modal dialog should remain in front while allowing interaction with the rest of the page.
 
 - **Glass Pane** A layer that manages z-ordering and/or interaction for the page.
 - **Non-Modal Dialog:** Allows the user to interact with the rest of the page while the dialog is open.
 - **Modal Dialog** This dialog is dismissed when closed or when the user taps away from it.
 - **Enhanced ComboBox / DropDown with a Refined Glass Pane Layer:** Improves the layering system so components like combo boxes can be used anywhere in the scene tree.  
 
-By adding these facets to SceneryStack—with a focus on **accessibility**—you will help grow the library’s functionality and empower developers to create more robust, inclusive interfaces.  We have initial prototype implementations in phetsims/joist that we would like to generalize and improve.
+By adding these facets to SceneryStack—with a focus on accessibility—you will help grow the library’s functionality and empower developers to create more robust, inclusive interfaces.  We have initial prototype implementations in phetsims/joist that we would like to generalize and improve.
 
 Project scope depends on the complexity of the components chosen and the desired level of polish. Contributors are encouraged to discuss their ideas with the mentor and community to ensure alignment with SceneryStack’s goals.
 
 #### Key Tasks
 
-1. **Research and Planning**  
-   - Investigate how glass panes, dialog systems, combo boxes and popups are implemented in other popular UI libraries.
+1. **Research and Planning:** Investigate how glass panes, dialog systems, combo boxes and popups are implemented in other popular UI libraries.
 
-2. **Design and Prototyping**  
-   - Create initial design specifications for the glass pane layer and how it will be used by modal dialogs, popups, menus, and combo boxes.
-   - Collaborate with the mentor and community to ensure designs meet SceneryStack’s coding standards and accessibility guidelines.  
+1. **Design and Prototyping:**  
+    - Create initial design specifications for the glass pane layer and how it will be used by modal dialogs, popups, menus, and combo boxes.
+    - Collaborate with the mentor and community to ensure designs meet SceneryStack’s coding standards and accessibility guidelines.  
 
-3. **Implementation with Accessibility in Mind**: Implement components with SceneryStack's accessibility features, such as keyboard navigation and screen reader support.  
+2. **Implementation with Accessibility in Mind:** Implement components with SceneryStack's accessibility features, such as keyboard navigation and screen reader support.  
 
-4. **Integration and Refactoring**: Ensure new components integrate seamlessly into SceneryStack’s existing architecture.  
-   - If needed, refactor relevant sections of the codebase (e.g., the glass pane layer) to improve maintainability and performance.
-   - Create **developer-friendly documentation**, including code examples and usage guidelines.
-   - Adjust some or all PhET simulations that exercise this functionality to use the new strategy.
+3. **Integration and Refactoring:**
+    - Ensure new components integrate seamlessly into SceneryStack’s existing architecture.  
+    - If needed, refactor relevant sections of the codebase (e.g., the glass pane layer) to improve maintainability and performance.
+    - Create developer-friendly documentation, including code examples and usage guidelines.
+    - Adjust some or all PhET simulations that exercise this functionality to use the new strategy.
 
-5. **Testing and QA**  
-   - Write **unit and integration tests** to verify component functionality and prevent regressions.
+4. **Testing and QA:** Write unit and integration tests to verify component functionality and prevent regressions.
 
 #### Expected Outcomes/Benefits/Deliverables
 
 - **New Glass Pane Layer:** Implementation and usage of a glass pane layer that can be used for showing modal dialogs,
-- **Accessibility Enhancements:** Improved **assistive technology support** for common UI components (keyboard navigation, screen reader announcements, etc.).  
+- **Accessibility Enhancements:** Improved assistive technology support for common UI components (keyboard navigation, screen reader announcements, etc.).  
 - **Refined Codebase:** Potential refactoring of underlying infrastructure (e.g., glass pane layer) for easier maintenance and future component development.
-- **Community Growth:** Contributions will encourage **more developers** to adopt SceneryStack, seeing that it supports core UI features with robust accessibility.  
+- **Community Growth:** Contributions will encourage more developers to adopt SceneryStack, seeing that it supports core UI features with robust accessibility.  
 
 #### Why This Project?
 
-Despite the growing focus on **inclusive design**, many open-source libraries either lack **key UI components** or provide them with **inconsistent** accessibility features. Filling these gaps in SceneryStack will:  
+Despite the growing focus on inclusive design, many open-source libraries either lack key UI components or provide them with inconsistent accessibility features. Filling these gaps in SceneryStack will:  
 
 - **Accelerate Development:** Reduce the need for custom-coded solutions, streamlining the creation of new projects.  
-- **Ensure Accessibility from the Start:** Provide **built-in best practices** that automatically offer keyboard, screen reader, and other essential support.  
-- **Promote Inclusivity:** Expand the range of accessible user interfaces, benefitting both **developers** who want to build inclusive apps and **end-users** with diverse needs.  
+- **Ensure Accessibility from the Start:** Provide built-in best practices that automatically offer keyboard, screen reader, and other essential support.  
+- **Promote Inclusivity:** Expand the range of accessible user interfaces, benefitting both developers who want to build inclusive apps and end-users with diverse needs.  
 - **Showcase Good A11y Practices:** Demonstrate how to implement components “accessibility-first,” serving as a reference for other open-source projects.  
 
 #### How to Apply
